syntax = "proto3";
package alliance.alliance;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";

option go_package = "alliance/x/alliance/types";

message CreateAllianceProposal {
    option (gogoproto.goproto_getters)         = false;
    //option (cosmos_proto.implements_interface) = "cosmos.gov.v1beta1.Content";
    
    // the title of the update proposal
    string title = 1;
    // the description of the proposal
    string description = 2;
    
    // Denom of the asset. It could either be a native token or an IBC token
    string denom      = 3 [(gogoproto.moretags) = "yaml:\"denom\""];
    // The reward weight specifies the ratio of rewards that will be given to each alliance asset
    // It does not need to sum to 1. rate = weight / total_weight
    // Native asset is always assumed to have a weight of 1.
    string reward_weight =4 [
        (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
        (gogoproto.nullable)   = false
    ];
    // A positive take rate is used for liquid staking derivatives. It defines an annualized reward rate that
    // will be redirected to the distribution rewards pool
    string take_rate = 5 [
        (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
        (gogoproto.nullable)   = false
    ];
}
  
message UpdateAllianceProposal {
    option (gogoproto.goproto_getters)         = false;
    //option (cosmos_proto.implements_interface) = "cosmos.gov.v1beta1.Content";
    // the title of the update proposal
    string title = 1;
    // the description of the proposal
    string description = 2;

    // Denom of the asset. It could either be a native token or an IBC token
    string denom      = 3 [(gogoproto.moretags) = "yaml:\"denom\""];

    // The reward weight specifies the ratio of rewards that will be given to each alliance asset
    // It does not need to sum to 1. rate = weight / total_weight
    // Native asset is always assumed to have a weight of 1.
    string reward_weight = 4 [
        (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
        (gogoproto.nullable)   = false
    ];

    string take_rate = 5 [
        (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
        (gogoproto.nullable)   = false
    ];
}
  
message DeleteAllianceProposal {
    option (gogoproto.goproto_getters)         = false;
    //option (cosmos_proto.implements_interface) = "cosmos.gov.v1beta1.Content";
    // the title of the update proposal
    string title = 1;
    // the description of the proposal
    string description = 2;
  
    string denom = 3;
}
  